--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docmost",
-  "homepage": "https://docmost.com",
+  "name": "prism",
+  "homepage": "",
   "version": "0.22.2",
   "private": true,
   "scripts": {
